--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Track My Faps - Storing Masturbation Data</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Raleway');
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+    </style>
   </head>
   <body>
-
+    <!-- div that covers whole page-->
+    <div class="page">
+    </div>
+    <!-- div for the logo-->
+    <div id="logo">
+      <h1>Track My Faps <sup>tm</sup></h1>
+    </div>
+    <!-- navbar with links-->
+    <div class="navigation"
+      <a href="" target="_blank">Faps</a>
+      <a href="" target="_blank">Updates</a>
+      <a href="" target="_blank">About Us</a>
+    </div>
   </body>
 </html>
