--- a/index.html
+++ b/index.html
@@ -20,10 +20,24 @@
       <h1>Track My Faps <sup>tm</sup></h1>
     </div>
     <!-- navbar with links-->
-    <div class="navigation"
+    <div class="navigation">
       <a href="" target="_blank">Faps</a>
       <a href="" target="_blank">Updates</a>
       <a href="" target="_blank">About Us</a>
+    <!-- sign up and log in buttons on right side of nav bar-->
+    <div class="account"
+      <div id="Sign Up">
+        <h1>Sign Up</h1>
+      <div id="Log In">
+
+      </div>
+      </div>
+    </div>
+    <div>
+    </div>
+
+
+
     </div>
   </body>
 </html>
