--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <body>
     <!-- div that covers whole page-->
     <div class="page">
-    </div>
     <!-- div for the logo-->
     <div id="logo">
       <h1>Track My Faps <sup>tm</sup></h1>
@@ -24,17 +23,18 @@
       <a href="" target="_blank">Faps</a>
       <a href="" target="_blank">Updates</a>
       <a href="" target="_blank">About Us</a>
+    </div>
     <!-- sign up and log in buttons on right side of nav bar-->
-    <div class="account"
-      <div id="Sign Up">
-        <h1>Sign Up</h1>
-      <div id="Log In">
+      <div class="account">
+        <div id="signup">
+          <h1 title="Get Fappin!">Sign Up</h1>
+        </div>
+        <div id="login">
+          <h1 title="Log your faps!">Log In</h1>
+        </div>
+      </div>
 
-      </div>
-      </div>
-    </div>
-    <div>
-    </div>
+
 
 
 
