--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <!-- sign up and log in buttons on right side of nav bar-->
       <div class="account">
         <div id="signup">
-          <h1 title="Get Fappin!">Sign Up</h1>
+          <a href="" title="Get Fappin!">Sign Up</a>
         </div>
         <div id="login">
-          <h1 title="Log your faps!">Log In</h1>
+          <a href="" title="Log your faps!">Log In</a>
         </div>
       </div>
 
