big time change

--- a/index.html
+++ b/index.html
@@ -13,31 +13,27 @@
   </head>
   <body>
     <!-- div that covers whole page-->
-    <div class="page">
-    <!-- div for the logo-->
-    <div id="logo">
-      <h1>Track My Faps <sup>tm</sup></h1>
+<div class="page">
+
+  <div class="navbar">
+    <div class="navbar-inner">
+      <div class="left">
+        <a href="#" class="link">My Faps</a>
+        <a href="#" class="link">Updates</a>
+        <a href="#" class="link">About Us</a>
     </div>
-    <!-- navbar with links-->
-    <div class="navigation">
-      <a href="" target="_blank">Faps</a>
-      <a href="" target="_blank">Updates</a>
-      <a href="" target="_blank">About Us</a>
-    <!-- sign up and log in buttons on right side of nav bar-->
-      <div class="account">
-        <div id="signup">
-          <a href="" title="Get Fappin!">Sign Up</a>
-        </div>
-        <div id="login">
-          <a href="" title="Log your faps!">Log In</a>
-        </div>
-      </div>
+    <div class="center">Track My Faps</div>
+    <div class="right">
+        <a href="#" class="link">Sign Up</a>
+        <a href="#" class="link">Log In</a>
     </div>
+  </div>
+
+</div>
 
 
 
 
-
-    </div>
+</div>
   </body>
 </html>
