--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
   <div class="navbar">
     <div class="navbar-inner">
-      <div class="left">
+      <div class="navleft">
         <a href="#" class="link">My Faps</a>
+        <a href="#" class="link">Log In</a>
+        <a href="#" class="link">Sign Up</a>
+    </div>
+    <div class="navcenter">Track My Faps</div>
+    <div class="navright">
         <a href="#" class="link">Updates</a>
         <a href="#" class="link">About Us</a>
-    </div>
-    <div class="center">Track My Faps</div>
-    <div class="right">
-        <a href="#" class="link">Sign Up</a>
-        <a href="#" class="link">Log In</a>
     </div>
   </div>
 
